<resources>
    <string name="app_name">Astro</string>
    <string name="fail_get_channel_list">Fail to get channel list</string>
    <string name="loading">Loading...</string>
    <string name="sort_by_number">Sort by Number</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="fail_get_schedule">Fail to get schedule list</string>
    <string name="change_date">Change Date</string>
    <string name="no_schedule">No schedule available</string>
    <string name="facebook_app_id">1409246369093559</string>
    <string name="tv_guide">TV Guide</string>
    <string name="welcome_to_astro">Welcome to Astro!</string>
    <string name="please_login_to_use_our_apps">Please login to use our apps</string>
    <string name="fail_login">Fail to login, please try again later</string>
    <string name="logout">Log Out</string>
    <string name="sort_by_favourite">Sort by Favourite</string>
    <string name="channel">Channel</string>
    <string name="channel_list">Channel List</string>
    <string name="tv_guide_date">TV Guide on %1$s</string>
</resources>
